# flock

./: .gitignore  README.md
flock/: package.xml
flock_base/: CMakeLists.txt  package.xml
flock_base/cfg/: default.rviz
flock_base/launch/: teleop.launch
flock_base/src/: detect_aruco.py  detect_aruco.py.bak  flock_base.py  flock_base.py.bak
flock_description/: package.xml
flock_description/urdf/: tello.urdf.xacro
flock_driver/: CMakeLists.txt  package.xml
flock_driver/scripts/: environment_test.py
flock_driver/src/: flock_driver.py  flock_driver.py.bak
flock_msgs/: CMakeLists.txt  package.xml
flock_msgs/msg/: Flip.msg
flock_perception/: CMakeLists.txt  package.xml
flock_perception/launch/: emotion_detection.launch  follow_human.launch
flock_perception/scripts/: follow_human.py
flock_perception/scripts/emotion_detection/: Classification_little_vgg.py  README.md  emotion_detector.py  emotion_manager.py  main.py
flock_perception/scripts/follow_human/: follow_human.py  pid.py
flock_perception/scripts/object_detection/: detect_ros.py
flock_rviz/cfg/: default.rviz
