<?xml version="1.0"?>
<package format="2">

  <name>flock</name>
  <version>0.1.0</version>
  <description>ROS driver for Tello drones</description>

  <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
  <license>BSD</license>

  <author>Clyde McQueen</author>
  <author>Peter Mullen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>flock_driver</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
